--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,5 @@
-name: object_detection
-description: A new Flutter project.
-
+name: zune
+description: Object detection in AR
 
 publish_to: 'none'
 
@@ -25,12 +24,15 @@ dependencies:
   path_provider: ^2.0.11
   image_picker: ^0.8.5+3
 
-  flutter_native_splash: ^2.0.4
+  flutter_native_splash: ^2.2.11
   provider: ^6.0.2
   oktoast: ^3.2.0
+  auto_size_text: ^3.0.0
   google_fonts: ^3.0.1
   connectivity_plus: ^2.2.1
   palestine_console: ^0.0.10
+
+  animated_bottom_navigation_bar: ^1.1.0
 
   hive_flutter: ^1.1.0
   hive: ^2.0.6
@@ -39,8 +41,8 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
+  flutter_launcher_icons: "^0.10.0"
   flutter_lints: ^2.0.1
-  flutter_launcher_icons: ^0.10.0
   build_runner: ^2.1.7
   hive_generator: ^1.1.2
 
@@ -48,7 +50,7 @@ flutter_icons:
   android: "launcher_icon"
   ios: true
   image_path: "assets/launcher_icon/icon.png"
-  adaptive_icon_background: "#FFA401"
+  adaptive_icon_background: "#292828"
   adaptive_icon_foreground: "assets/launcher_icon/foreground.png"
 
 flutter:
