--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   oktoast: ^3.2.0
   auto_size_text: ^3.0.0
   google_fonts: ^3.0.1
+  animations: ^2.0.7
   connectivity_plus: ^2.2.1
   palestine_console: ^0.0.10
 
