--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,11 @@ dependencies:
 
   hive_flutter: ^1.1.0
   hive: ^2.0.6
+  google_static_maps_controller: ^1.0.0
+  geolocator: ^9.0.2
+  geocoding: ^2.0.5
+  permission_handler: ^10.2.0
+
 
 dev_dependencies:
   flutter_test:
@@ -60,6 +65,7 @@ flutter:
 
   assets:
     - assets/
+    - assets/images/
 
 
   fonts:
