--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   geolocator: ^9.0.2
   geocoding: ^2.0.5
   permission_handler: ^10.2.0
+  url_launcher: ^6.1.6
 
 
 dev_dependencies:
