--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -21,9 +21,16 @@ if (flutterVersionName == null) {
     flutterVersionName = '1.0'
 }
 
+def keystoreProperties = new Properties()
+def keystorePropertiesFile = rootProject.file('key.properties')
+if (keystorePropertiesFile.exists()) {
+    keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
+}
+
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
+apply from: project(':flutter_config').projectDir.getPath() + "/dotenv.gradle"
 
 android {
     compileSdkVersion 33
@@ -52,9 +59,23 @@ android {
     }
 
 
+    signingConfigs {
+       release {
+           keyAlias keystoreProperties['keyAlias']
+           keyPassword keystoreProperties['keyPassword']
+           storeFile keystoreProperties['storeFile'] ? file(keystoreProperties['storeFile']) : null
+           storePassword keystoreProperties['storePassword']
+       }
+   }
+
     buildTypes {
+        debug {
+            signingConfig signingConfigs.debug
+            buildConfigField("String", "map_api_key", "\"AIzaSyCnbEUi_fwEpV_TTmgwP6lBArhm-azrhC8\"")
+        }
        release {
            signingConfig signingConfigs.debug
+           buildConfigField("String", "map_api_key", "\"AIzaSyCnbEUi_fwEpV_TTmgwP6lBArhm-azrhC8\"")
        }
     }
 
