--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,12 +3,15 @@
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:name="${applicationName}"
         android:label="Zune"
         android:icon="@mipmap/launcher_icon">
 
+        <meta-data android:name="com.google.android.geo.API_KEY"
+                android:value="AIzaSyCnbEUi_fwEpV_TTmgwP6lBArhm-azrhC8"/>
 
         <activity
             android:name=".MainActivity"
@@ -33,6 +36,7 @@
           
 
         </activity>
+
         <meta-data
             android:name="flutterEmbedding"
             android:value="2"/>
