--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
   animations: ^2.0.7
   connectivity_plus: ^2.2.1
   palestine_console: ^0.0.10
+  flutter_config: ^2.0.0
+
 
   animated_bottom_navigation_bar: ^1.1.0
 
@@ -42,7 +44,9 @@ dependencies:
   geolocator: ^9.0.2
   geocoding: ^2.0.5
   permission_handler: ^10.2.0
+  share_plus: ^4.5.3
   url_launcher: ^6.1.6
+  cached_network_image: ^3.2.0
 
 
 dev_dependencies:
@@ -68,6 +72,7 @@ flutter:
   assets:
     - assets/
     - assets/images/
+    - .env
 
 
   fonts:
